@@ -225,24 +225,84 @@ name|int
 name|doc
 parameter_list|)
 block|{
-return|return
-name|dist
-operator|.
-name|getDistance
-argument_list|(
+name|String
+name|s1
+init|=
 name|str1DV
 operator|.
 name|strVal
 argument_list|(
 name|doc
 argument_list|)
-argument_list|,
+decl_stmt|;
+name|String
+name|s2
+init|=
 name|str2DV
 operator|.
 name|strVal
 argument_list|(
 name|doc
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|s1
+operator|||
+literal|null
+operator|==
+name|s2
+condition|)
+block|{
+comment|// the only thing a missing value scores 1.0 with is another missing value
+return|return
+operator|(
+name|s1
+operator|==
+name|s2
+operator|)
+condition|?
+literal|1.0F
+else|:
+literal|0.0F
+return|;
+block|}
+return|return
+name|dist
+operator|.
+name|getDistance
+argument_list|(
+name|s1
+argument_list|,
+name|s2
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|exists
+parameter_list|(
+name|int
+name|doc
+parameter_list|)
+block|{
+return|return
+name|str1DV
+operator|.
+name|exists
+argument_list|(
+name|doc
+argument_list|)
+operator|&&
+name|str2DV
+operator|.
+name|exists
+argument_list|(
+name|doc
 argument_list|)
 return|;
 block|}
